# hexasphere

./: LICENSE  README.md  geometry.py  main.py  projection.py  pyproject.toml
src/hexasphere/: geometry.py  hexgrid.py  projection.py
tests/: test_hexgrid.py  test_neighbors.py  test_overlapping.py  test_polygon.py  test_resolution.py
