[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexasphere"
version = "0.0.1"
authors = [
  { name="Marius Alonso", email="marius@allphins.com" },
]
description = "A module to create (almost) hexagonal grids on a sphere"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AllphinsPilot/hexasphere"
"Bug Tracker" = "https://github.com/AllphinsPilot/hexasphere/issues"